# neural

./: .gitignore  CMakeLists.txt  HiddenNeuron.hpp  InputNeuron.hpp  Layer.hpp  NeuralNet.cpp  NeuralNet.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkLow.cpp  NeuralNetworkLow.hpp  Neuron.hpp  OutputNeuron.hpp  Random.hpp  main.cpp
